--- a/BookingTables/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/BookingTables/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,13 +29,13 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
+            <a class="nav-link text-dark" [routerLink]="['/orders']"
+              >My orders</a
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
+            <a class="nav-link text-dark" [routerLink]="['/tables-info']"
+              >Tables info</a
             >
           </li>
         </ul>
