--- a/BookingTables/ClientApp/src/app/reserve/reserve.component.html
+++ b/BookingTables/ClientApp/src/app/reserve/reserve.component.html
@@ -1,42 +1,38 @@
 <div class="testbox">
-  <form action="/">
+  <form>
     <div class="banner">
       <h1>Restaurant Reservation Form</h1>
     </div>
     <div class="item">
       <p>Name</p>
       <div class="name-item">
-        <input type="text" name="name" placeholder="First" />
-        <input type="text" name="name" placeholder="Last" />
+        <input type="text" name="fname"  placeholder="First" />
+        <input type="text" name="lname"  placeholder="Last" />
       </div>
     </div>
     <div class="item">
       <p>Email</p>
-      <input type="email" name="email" />
+      <input type="email"  name="email" />
     </div>
     <div class="item">
       <p>Phone</p>
-      <input type="text" name="phone" placeholder="### ### ####" />
+      <input type="text" name="phone"  placeholder="### ### ####" />
     </div>
     <div class="item">
       <p>Reservation Date</p>
-      <input type="date" name="bdate" required />
+      <input type="datetime-local" name="dateStart" [(ngModel)]="order.dateStart" required />
       <i class="fas fa-calendar-alt"></i>
     </div>
     <div class="item">
-      <p>Reservation Time</p>
-      <input type="time" name="btime" required />
+      <p>How long do you book a table for?</p>
+      <input type="number" min="0" name="timeOfBooking" [(ngModel)]="order.timeOfBooking" />
     </div>
     <div class="item">
       <p>How many people will you be with?</p>
-      <input type="number" min="0" name="language" />
-    </div>
-    <div class="item">
-      <p>Additional notes</p>
-      <textarea rows="3"></textarea>
+      <input type="number" min="0" name="countUser" [(ngModel)]="order.countUser" />
     </div>
     <div class="btn-block">
-      <button type="submit" href="/">Send</button>
+      <button (click)="this.reserve()">Send</button>
     </div>
   </form>
 </div>
